--------------------------------------------------------
--  File created - Thursday-February-25-2021   
--------------------------------------------------------
--------------------------------------------------------
--  DDL for Table ENDERECOPOSTAL
--------------------------------------------------------

  CREATE TABLE "UPSKILL_BD_TURMA1_01"."ENDERECOPOSTAL" 
   (	"IDENDERECOPOSTAL" NUMBER(*,0) GENERATED ALWAYS AS IDENTITY MINVALUE 1 MAXVALUE 9999999999999999999999999999 INCREMENT BY 1 START WITH 1 CACHE 20 NOORDER  NOCYCLE  NOKEEP  NOSCALE , 
	"ARRUAMENTO" VARCHAR2(50 BYTE), 
	"NUMEROPORTA" VARCHAR2(20 BYTE), 
	"LOCALIDADE" VARCHAR2(20 BYTE), 
	"CODPOSTAL" VARCHAR2(8 BYTE)
   ) SEGMENT CREATION IMMEDIATE 
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255 
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "USERS" ;
--------------------------------------------------------
--  DDL for Index PK_ENDERECOPOSTAL_IDENDERECOPOSTAL
--------------------------------------------------------

  CREATE UNIQUE INDEX "UPSKILL_BD_TURMA1_01"."PK_ENDERECOPOSTAL_IDENDERECOPOSTAL" ON "UPSKILL_BD_TURMA1_01"."ENDERECOPOSTAL" ("IDENDERECOPOSTAL") 
  PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS 
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "USERS" ;
--------------------------------------------------------
--  Constraints for Table ENDERECOPOSTAL
--------------------------------------------------------

  ALTER TABLE "UPSKILL_BD_TURMA1_01"."ENDERECOPOSTAL" MODIFY ("CODPOSTAL" CONSTRAINT "NN_ENDERECOPOSTAL_CODIGOPOSTAL" NOT NULL ENABLE);
  ALTER TABLE "UPSKILL_BD_TURMA1_01"."ENDERECOPOSTAL" ADD CONSTRAINT "PK_ENDERECOPOSTAL_IDENDERECOPOSTAL" PRIMARY KEY ("IDENDERECOPOSTAL")
  USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS 
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "USERS"  ENABLE;
  ALTER TABLE "UPSKILL_BD_TURMA1_01"."ENDERECOPOSTAL" MODIFY ("IDENDERECOPOSTAL" NOT NULL ENABLE);
