@startuml
title UC01 - Registar Organização - Excerto do Modelo de Domínio

left to right direction

class Plataforma {
String designacao
}

class Organização {
String nome
String NIF
String website
String telefone
String email
}

class Colaborador {
String nome
String funcao
String telefone
String email
}

class EnderecoPostal {
String local
String codPostal
String localidade
}

class Utilizador {
String nome
String email
String password
}

class AlgoritmoExternoGeracaoPwd {
}

Plataforma "1"--"*" Organização : tem registadas >
Plataforma "1"--"1" AlgoritmoExternoGeracaoPwd : recorre a >
AlgoritmoExternoGeracaoPwd "1"--"*" Utilizador : gera password >
Organização "1"--"1..*" Colaborador : tem >
Organização "1"--"1" Colaborador : tem gestor >
Organização "0..1"--"1" EnderecoPostal : localizada em >
Colaborador "0..1"--"1" Utilizador : atua como >

@enduml